added whoops error display

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"activecampaign/api-php": "1.0.0",
         "stripe/stripe-php": "^3.21",
         "braintree/braintree_php": "^3.16",
-        "aws/aws-sdk-php": "^3.19"    
+        "aws/aws-sdk-php": "^3.19",
+        "filp/whoops": "^2.1"    
     },
     "autoload": {
         "psr-4": {
